@@ -1,5 +1,6 @@
 package com.bluebell.planter.controllers.trade;
 
+import java.util.Collections;
 import java.util.List;
 
 import static org.hamcrest.Matchers.containsString;
@@ -34,7 +35,7 @@ import org.springframework.util.MultiValueMap;
  * Testing class for {@link TradeRecordApiController}
  *
  * @author Stephen Prizio
- * @version 0.1.1
+ * @version 0.1.2
  */
 @SpringBootTest
 @AutoConfigureMockMvc(addFilters = false)
@@ -51,7 +52,7 @@ class TradeRecordApiControllerTest extends AbstractPlanterTest {
     public void setUp() {
         Mockito.when(this.tradeRecordService.getTradeRecords(any(), any(), any(), any(), anyInt())).thenReturn(TradeRecordReport.builder().tradeRecords(List.of(generateTradeRecord())).tradeRecordTotals(null).build());
         Mockito.when(this.tradeRecordService.getRecentTradeRecords(any(), any(), anyInt())).thenReturn(TradeRecordReport.builder().tradeRecords(List.of(generateTradeRecord())).tradeRecordTotals(null).build());
-        Mockito.when(this.tradeRecordService.getTradeRecordControls(any(), any())).thenReturn(TradeRecordControls.builder().yearEntries(List.of(TradeRecordControlsYearEntry.builder().year("2025").monthEntries(List.of()).build())).build());
+        Mockito.when(this.tradeRecordService.getTradeRecordControls(any(), any())).thenReturn(TradeRecordControls.builder().yearEntries(List.of(TradeRecordControlsYearEntry.builder().year("2025").monthEntries(Collections.emptyList()).build())).build());
         Mockito.when(this.tradeRecordService.getTradeLog(any(), any(), any(), any(), anyInt())).thenReturn(generateTradeLog());
     }
 
